# vera-open

./: .dockerignore  .env.example  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  robots.txt  setup.html  sitemap.xml
config/: calibration_fixtures.example.yaml  candidate_profile.example.yaml  config.ci.yaml  config.example.yaml  target_companies.example.yaml
docs/: CREATING_PACKS.md  DOCKER.md  NOTION_TEMPLATE.md  RESEARCH_PACKS.md  SETUP.md  TROUBLESHOOTING.md
scripts/: fill_missing_tasks.py
state/: briefing_history.json  briefing_state.json  events.json  last_run.json  observations.json  rss_cache.json
tests/: test_backend_notion.py  test_briefing.py  test_briefing_history.py  test_calendar.py  test_check_semanal.py  test_cli.py  test_config.py  test_config_env_expansion.py  test_dedup.py  test_doctor.py  test_domains.py  test_e2e.py  test_feedback.py  test_financial_pack.py  test_jobs_blockers.py  test_jobs_calibration.py  test_jobs_pack.py  test_jobs_rule_scorer.py  test_last_run.py  test_llm_health.py  test_llm_providers.py  test_news_pack.py  test_personal_astro.py  test_personal_bot.py  test_registry.py  test_research_base.py  test_research_e2e.py  test_retry.py  test_scoring.py  test_setup.py  test_setup_notion.py  test_setup_validators.py  test_setup_wizard.py  test_source_health.py  test_sources.py  test_state.py  test_synthesis.py  test_telegram.py  test_telegram_bot.py  test_workspace.py
vera/: __init__.py  cli.py  config.py  doctor.py  event_engine.py  llm_health.py  packs_cli.py  state.py  (+2 more)
(+83 files in other folders)
